syntax = "proto3";

package pomodoro;

service Session {
  rpc GetState (GetStateRequest) returns (GetStateResponse);
  rpc Start (StartRequest) returns (StartResponse);
  rpc Stop (StopRequest) returns (StopResponse);
}

message GetStateRequest {}
message GetStateResponse {
  enum Phase {
    STOPPED = 0;
    WORKING = 1;
    SHORT_BREAK = 2;
    LONG_BREAK = 3;
  }
  enum Remaining {
    UNLIMITED = 0;
    LIMITED = 1;
  }
  Phase phase = 1;
  uint64 time_remaining = 2;
  Remaining remaining_periods = 3;
  uint32 periods = 4;
}

message StartRequest {
  uint32 periods = 1;
  uint32 work_time = 2;
  uint32 short_break_time = 3;
  uint32 long_break_time = 4;
  uint32 short_breaks_before_long = 5;
}
message StartResponse {}

message StopRequest {}
message StopResponse {}
